--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,3 +68,54 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+#Gaufrette
+knp_gaufrette:
+    stream_wrapper: ~
+
+    adapters:
+        image_adapter:
+            local:
+                directory: %kernel.root_dir%/../web/gallery
+
+    filesystems:
+        image_fs:
+            adapter:    image_adapter
+#Vich
+vich_uploader:
+    db_driver: orm
+    storage:   gaufrette
+
+    mappings:
+        image:
+            uri_prefix:         /images
+            upload_destination: image_fs
+
+#LiipImagine
+liip_imagine:
+    resolvers:
+       default:
+          web_path:
+              web_root: "%kernel.root_dir%/../web"
+              cache_prefix: "cache"
+    loaders:
+        default:
+            filesystem:
+                data_root: "%kernel.root_dir%/../web/"
+    driver:   gd
+    cache:    default
+    data_loader: default
+    default_image: null
+    controller:
+        filter_action:          liip_imagine.controller:filterAction
+        filter_runtime_action:  liip_imagine.controller:filterRuntimeAction
+    filter_sets:
+        cache: ~
+        thumb_400x300:
+            quality: 100
+            filters:
+                thumbnail: { size: [400, 300]}
+        thumb_1280x1080:
+            quality: 100
+            filters:
+                thumbnail: { size: [1280, 1080]}
