--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,6 +8,10 @@ security:
             memory: ~
 
     firewalls:
+
+        default:
+            anonymous: ~
+            http_basic: ~
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -22,3 +26,6 @@ security:
 
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
             #form_login: ~
+    access_control:
+            # require ROLE_ADMIN for /admin*
+            - { path: ^/dashboard, roles: ROLE_ADMIN }
