--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,13 @@
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
 _liip_imagine:
     resource: "@LiipImagineBundle/Resources/config/routing.xml"
